--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -96,7 +96,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1910,Y=1046)
 LastExecutedLaunchDevice=WindowsNoEditor@LAPTOP-64P9K2G1
 LastExecutedLaunchName=LAPTOP-64P9K2G1
 LastExecutedPIEPreviewDevice=
@@ -133,13 +133,13 @@ GridEnabled=False
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Maps/Alley
-MRUItem1=/Game/Maps/Park
-MRUItem2=/Game/Maps/TrashPlace
-MRUItem3=/Game/Maps/Menu
-MRUItem4=/Game/Maps/Street
-MRUItem5=/Game/Maps/Hospital
-MRUItem6=/Game/Maps/School
+MRUItem0=/Game/Maps/Street
+MRUItem1=/Game/Maps/TrashPlace
+MRUItem2=/Game/Maps/Hospital
+MRUItem3=/Game/Maps/School
+MRUItem4=/Game/Maps/Alley
+MRUItem5=/Game/Maps/Park
+MRUItem6=/Game/Maps/Menu
 MRUItem7=/Game/Maps/LevelSelection
 MRUItem8=/Game/ThirdPersonBP/Menu
 MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -210,35 +210,33 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/Alley
+LastLevel=/Game/Maps/Street
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley.BP_CheckToAdvance_Alley
-OpenAssetsAtExit=/Game/Blueprints/Collectibles/BP_Apple.BP_Apple
-OpenAssetsAtExit=/Game/Blueprints/BP_GameModeRaccoon.BP_GameModeRaccoon
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Street/BP_Car1.BP_Car1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_GameModeRaccoon
-MRUItem1=/Game/Maps/Alley
-MRUItem2=/Game/Maps/Park
-MRUItem3=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
-MRUItem4=/Game/Blueprints/Collectibles/BP_Soda_2
-MRUItem5=/Game/Assets/3D/Objects/Apple/Apple1
-MRUItem6=/Game/Blueprints/Collectibles/BP_CheckToAdvance
-MRUItem7=/Game/Assets/3D/Objects/Sewer_Head
-MRUItem8=/Game/Assets/3D/Objects/Soda/Material_001
-MRUItem9=/Game/Assets/3D/Objects/Soda/Material_002
-MRUItem10=/Game/Blueprints/Collectibles/BP_Object1
-MRUItem11=/Game/Assets/3D/Objects/Material_002
-MRUItem12=/Game/Assets/3D/Objects/Material_001
-MRUItem13=/Game/Assets/3D/Objects/Material
-MRUItem14=/Game/Assets/3D/Objects/Arrow/Arrow6
-MRUItem15=/Game/Assets/3D/Objects/Arrow/Arrow5Albedo
-MRUItem16=/Game/Maps/TrashPlace
-MRUItem17=/Game/Maps/Menu
-MRUItem18=/Game/Assets/3D/TrashPlace/Material_3
-MRUItem19=/Game/Assets/3D/TrashPlace/Material_002
+MRUItem0=/Game/StarterContent/Particles/Materials/M_smoke_subUV
+MRUItem1=/Game/StarterContent/Particles/P_Steam_Lit
+MRUItem2=/Game/Maps/Street
+MRUItem3=/Game/Blueprints/Street/BP_Car1
+MRUItem4=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
+MRUItem5=/Game/Blueprints/Collectibles/BP_CoffePacket
+MRUItem6=/Game/Maps/TrashPlace
+MRUItem7=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Street
+MRUItem8=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_School
+MRUItem9=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Park
+MRUItem10=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Hospital
+MRUItem11=/Game/Maps/Hospital
+MRUItem12=/Game/Maps/School
+MRUItem13=/Game/Maps/Alley
+MRUItem14=/Game/Maps/Park
+MRUItem15=/Game/Blueprints/Collectibles/BP_DoctorHeartTool
+MRUItem16=/Game/Blueprints/Collectibles/BP_Book
+MRUItem17=/Game/Blueprints/BP_GameModeRaccoon
+MRUItem18=/Game/Blueprints/Collectibles/BP_Apple
+MRUItem19=/Game/Blueprints/Collectibles/BP_Soda_2
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1424,6 +1422,128 @@ BP_CheckToAdvance_Alley_C.Input=True
 BP_CheckToAdvance_Alley_C.Actor=True
 BP_CheckToAdvance_Alley_C.Tick=True
 BP_Soda_2_C.TransformCommon=True
+BP_Apple_C.Tick=True
+BP_Apple_C.Replication=True
+BP_Apple_C.Rendering=True
+BP_Apple_C.Actor=True
+BP_Apple_C.Collision=True
+BP_Apple_C.Input=True
+BP_Book_C.Tick=True
+BP_Book_C.Replication=True
+BP_Book_C.Rendering=True
+BP_Book_C.Actor=True
+BP_Book_C.Collision=True
+BP_Book_C.Input=True
+BP_CoffePacket_C.Tick=True
+BP_CoffePacket_C.Replication=True
+BP_CoffePacket_C.Rendering=True
+BP_CoffePacket_C.Actor=True
+BP_CoffePacket_C.Collision=True
+BP_CoffePacket_C.Input=True
+BP_DoctorHeartTool_C.Tick=True
+BP_DoctorHeartTool_C.Replication=True
+BP_DoctorHeartTool_C.Rendering=True
+BP_DoctorHeartTool_C.Actor=True
+BP_DoctorHeartTool_C.Collision=True
+BP_DoctorHeartTool_C.Input=True
+BP_CheckToAdvance_Street_C.Tick=True
+BP_CheckToAdvance_Street_C.Replication=True
+BP_CheckToAdvance_Street_C.Rendering=True
+BP_CheckToAdvance_Street_C.Actor=True
+BP_CheckToAdvance_Street_C.Collision=True
+BP_CheckToAdvance_Street_C.Input=True
+BP_CheckToAdvance_School_C.Tick=True
+BP_CheckToAdvance_School_C.Replication=True
+BP_CheckToAdvance_School_C.Rendering=True
+BP_CheckToAdvance_School_C.Actor=True
+BP_CheckToAdvance_School_C.Collision=True
+BP_CheckToAdvance_School_C.Input=True
+BP_CheckToAdvance_Hospital_C.Tick=True
+BP_CheckToAdvance_Hospital_C.Replication=True
+BP_CheckToAdvance_Hospital_C.Rendering=True
+BP_CheckToAdvance_Hospital_C.Actor=True
+BP_CheckToAdvance_Hospital_C.Collision=True
+BP_CheckToAdvance_Hospital_C.Input=True
+BP_CheckToAdvance_Park_C.Tick=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Materials=True
+Emitter.Attachment=True
+Emitter.Lighting=True
+Emitter.Rendering=True
+Emitter.LOD=True
+Emitter.Navigation=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Replication=True
+Emitter.Actor=True
+ParticleSystemComponent.Variable=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Sockets=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Materials=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.ComponentTick=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.Navigation=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.ComponentReplication=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
+ParticleSystemComponent.Events=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleModuleLifetime.Lifetime=True
+ParticleModuleLifetime.Cascade=True
+ParticleModuleSize.Size=True
+ParticleModuleSize.Cascade=True
+ParticleModuleAcceleration.Acceleration=True
+ParticleModuleAcceleration.Cascade=True
+ParticleModuleVelocity.Velocity=True
+ParticleModuleVelocity.Cascade=True
+ParticleModuleColorOverLife.Color=True
+ParticleModuleColorOverLife.Cascade=True
+ParticleModuleSubUV.SubUV=True
+ParticleModuleSubUV.Realtime=True
+ParticleModuleSubUV.Cascade=True
+ParticleModuleRotation.Rotation=True
+ParticleModuleRotation.Cascade=True
+ParticleModuleSizeMultiplyLife.Size=True
+ParticleModuleSizeMultiplyLife.Cascade=True
+ParticleModuleAccelerationDrag.Drag=True
+ParticleModuleAccelerationDrag.Cascade=True
+ParticleModuleSpawn.Spawn=True
+ParticleModuleSpawn.Burst=True
+ParticleModuleSpawn.Cascade=True
+ParticleModuleRequired.Emitter=True
+ParticleModuleRequired.Duration=True
+ParticleModuleRequired.Delay=True
+ParticleModuleRequired.SubUV=True
+ParticleModuleRequired.MacroUV=True
+ParticleModuleRequired.Rendering=True
+ParticleModuleRequired.ParticleCutout=True
+ParticleModuleRequired.Normals=True
+ParticleModuleRequired.Materials=True
+MaterialExpressionClamp.MaterialExpressionClamp=True
+MaterialExpressionClamp.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionDepthFade.MaterialExpressionDepthFade=True
+MaterialExpressionDepthFade.MaterialExpression=True
+MaterialExpressionParticleColor.MaterialExpression=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1580,8 +1700,34 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_GameModeRaccoon_C=
 GameModeBase=
+ParticleSystemComponent="\"Object.Tags.ComponentTags\" "
+FXSystemComponent="\"Object.Tags.ComponentTags\" "
+ParticleModuleLifetime="\"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModule=
+ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModuleSizeBase="\"Object.Size.LifeMultiplier.Distribution\" "
+ParticleModuleAcceleration="\"Object.Acceleration.Acceleration.Distribution\" "
+ParticleModuleAccelerationBase="\"Object.Drag.DragCoefficientRaw.Distribution\" "
+ParticleModuleVelocity="\"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleSubUV="\"Object.SubUV.SubImageIndex.Distribution\" "
+ParticleModuleSubUVBase="\"Object.SubUV.SubImageIndex.Distribution\" "
+ParticleModuleRotation="\"Object.Rotation.StartRotation.Distribution\" "
+ParticleModuleRotationBase="\"Object.Rotation.StartRotation.Distribution\" "
+ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier.Distribution\" "
+ParticleModuleAccelerationDrag="\"Object.Drag.DragCoefficientRaw.Distribution\" "
+ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit;
+RecentlyPlaced=/Game/Assets/3D/Objects/Sewer_Head.Sewer_Head;
+RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Hospital.BP_CheckToAdvance_Hospital;
+RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_School.BP_CheckToAdvance_School;
+RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Street.BP_CheckToAdvance_Street;
 RecentlyPlaced=/Game/Blueprints/Collectibles/BP_Soda_2.BP_Soda_2;
 RecentlyPlaced=/Game/Assets/3D/Objects/Apple/Apple.Apple;
 RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley.BP_CheckToAdvance_Alley;
@@ -1597,11 +1743,6 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 RecentlyPlaced=/Script/Engine.VolumetricCloud;/Engine/Transient.ActorFactoryVolumetricCloud_0
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Game/Assets/3D/Hospital/brown.brown;
-RecentlyPlaced=/Game/Assets/3D/Hospital/metalic.metalic;
-RecentlyPlaced=/Game/Assets/3D/Hospital/red.red;
-RecentlyPlaced=/Game/Assets/3D/Hospital/hospital.hospital;
-RecentlyPlaced=/Game/Assets/3D/Street/CoffeShop/Material_025.Material_025;
-RecentlyPlaced=/Game/Assets/3D/Street/CoffeShop/coffee_house_Coffe_House.coffee_house_Coffe_House;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1693,6 +1834,15 @@ LastLogListing=FBXImport
 /Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley.BP_CheckToAdvance_Alley=0
 /Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Park.BP_CheckToAdvance_Park=0
 /Game/Assets/3D/Objects/Apple/Apple1.Apple1=0
+/Game/Blueprints/Collectibles/BP_DoctorHeartTool.BP_DoctorHeartTool=0
+/Game/Blueprints/Collectibles/BP_Book.BP_Book=0
+/Game/Blueprints/Collectibles/BP_CoffePacket.BP_CoffePacket=0
+/Game/Blueprints/Collectibles/BP_Apple.BP_Apple=0
+/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Street.BP_CheckToAdvance_Street=0
+/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_School.BP_CheckToAdvance_School=0
+/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Hospital.BP_CheckToAdvance_Hospital=0
+/Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit=0
+/Game/StarterContent/Particles/Materials/M_smoke_subUV.M_smoke_subUV=0
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
@@ -2572,6 +2722,7 @@ Texture2D.Texture=True
 StaticMeshActor.Materials=True
 StaticMeshActor.StaticMesh=False
 PreviewMaterial.Material=True
+ParticleSystemComponent.Particles=False
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2922,7 +3073,6 @@ LevelSequenceEditorSettings=True
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
@@ -3024,4 +3174,37 @@ SingleInstantiationPlacementMode=0
 
 [SuppressableDialogs]
 ExtrudeCoordsWarning=True
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-45.000004 Y=-179.999969 R=0.000000
 
